@@ -62,7 +62,8 @@ public class LGResources {
 
         public static final Image MINIMIZE_BUTTON = PhetCommonResources.getImage( "buttons/minimizeButton.png" );
         public static final Image MAXIMIZE_BUTTON = PhetCommonResources.getImage( "buttons/maximizeButton.png" );
-        public static final Image POINT_TOOL = RESOURCES.getImage( "point_tool.png" );
+        public static final Image POINT_TOOL_BODY = RESOURCES.getImage( "point_tool_body.png" );
+        public static final Image POINT_TOOL_TIP = RESOURCES.getImage( "point_tool_tip.png" );
         public static final Image CHECK_MARK = RESOURCES.getImage( "Check-Mark-u2713.png" );
         public static final Image X_MARK = RESOURCES.getImage( "Heavy-Ballot-X-u2718.png" );
     }
